mobile and collapse fix

--- a/assets/component-facets.css
+++ b/assets/component-facets.css
@@ -202,6 +202,9 @@
   padding: 0 1.75rem 0 0;
   margin-bottom: 1.5rem;
 }
+.facets__and-helptext {
+  color: rgba(var(--color-foreground), 0.5);
+}
 
 .facets__disclosure fieldset {
   padding: 0;
@@ -228,13 +231,14 @@
   text-underline-offset: 0.3rem;
 }
 
-.facets__summary .facets__and-helptext {
-  color: rgba(var(--color-foreground), 0.5);
-  display: none;
+.facets__disclosure[open] .facets__and-helptext,
+.facets__disclosure-vertical[open] .facets__and-helptext {
+  display: block;
 }
 
-.facets__summary[aria-expanded='true'] .facets__and-helptext {
-  display: block;
+.facets__disclosure .facets__and-helptext,
+.facets__disclosure-vertical .facets__and-helptext {
+  display: none;
 }
 
 .disclosure-has-popup[open] > .facets__summary::before {
@@ -334,10 +338,7 @@
   top: 1.4rem;
 }
 .facet-checkbox .icon-checkmark.cross {
-  visibility: hidden;
-  position: absolute;
   left: 0.3rem;
-  z-index: 5;
   top: 1.2rem;
 }
 
@@ -803,7 +804,11 @@ details.menu-opening .mobile-facets__close svg {
   margin-left: auto;
 }
 
-.mobile-facets__summary > div,
+.mobile-facets__summary > div {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 .facets__summary > div {
   display: flex;
   flex-direction: column;
@@ -878,6 +883,10 @@ input.mobile-facets__checkbox {
   top: 1.9rem;
   left: 2.8rem;
   visibility: hidden;
+}
+.mobile-facets__label .icon-checkmark.cross {
+  top: 1.7rem;
+  left: 2.7rem;
 }
 
 .mobile-facets__label > input[type='checkbox']:checked ~ .icon-checkmark {
